A4: expõe TruffleJitRuntimeFactory (módulo truffle) + bench honesto ASM×Truffle
TruffleJitRuntimeFactory.truffleArmThumb(cacheEntries, hotThreshold[, arch]) espelha
JitRuntimeFactory.armThumb do core: mesmo pipeline tiered (frio interpretado + quente
em background) trocando o emissor ASM pelo TruffleCodeEmitter; o otimizador GBA entra
no nível do JitRuntime porque TruffleCodeEmitter não recebe IrOptimizer no construtor.
6 testes novos espelhando JitRuntimeJvmFactoryTest.

Bench coletado nesta task (não reaproveitado do spike A0): emissores de PRODUÇÃO
(AsmCodeEmitter x TruffleCodeEmitter) em JBR 25.0.3 + Truffle Unchained
(Truffle.getRuntime().getName()=="GraalVM CE" confirmado — compilação real, não
fallback interpretado), mesma sessão/máquina, best-of-5 x 2M execuções. ASM vence
5,17x a 20 instruções; Truffle vence 1,33x a 80 e 5,5x a 320 — confirma a direção da
A0 com números próprios do backend real. Tabela e recomendação documentadas no README
(seção Runtime JIT). Coluna GraalVM CE standalone fica PENDENTE (só há GraalVM CE 17
local, incompatível com Truffle 25.0.1 que exige JDK 21+ — mesmo bloqueio da A5).

gbaemu (216) e ndsemu (175) revalidados verdes sem mudar defaults (G3/G5) — Truffle
não tem wiring em nenhum consumidor, factory é opt-in.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>